CPG-DEV/src/objects/ProjectProduct__c.object
<CustomObject>
    <fields>
        <fullName>ActiveProduct__c</fullName>
        <formula>Product__r.IsActive</formula>
        <label>Active Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ActualAnnualVolume1Year__c</fullName>
        <label>Actual Annual Volume (1-year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualAnnualVolume2Year__c</fullName>
        <label>Actual Annual Volume (2-year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualAnnualVolume3year__c</fullName>
        <label>Actual Annual Volume (3-year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualAnnualVolumeCM0Year__c</fullName>
        <label>Actual Annual Volume CM (0-year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualAnnualVolumeCM1Year__c</fullName>
        <label>Actual Annual Volume CM (1-year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualAnnualVolumeCM2Year__c</fullName>
        <label>Actual Annual Volume CM (2-year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualVolume0YearImperial__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual Volume (0-Year) Imperial</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualVolume0YearMetric__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual Volume (0-Year) Metric</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualVolume1YearImperial__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual Volume (1-Year) Imperial</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualVolume1YearMetric__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual Volume (1-Year) Metric</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualVolume2YearImperial__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual Volume (2-Year) Imperial</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualVolume2YearMetric__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual Volume (2-Year) Metric</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualVolumeCM0YearImperial__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual Volume CM (0-Year) Imperial</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualVolumeCM0YearMetric__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual Volume CM (0-Year) Metric</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualVolumeCM1YearImperial__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual Volume CM (1-Year) Imperial</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualVolumeCM1YearMetric__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual Volume CM (1-Year) Metric</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualVolumeCM2YearImperial__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual Volume CM (2-Year) Imperial</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualVolumeCM2YearMetric__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual Volume CM (2-Year) Metric</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Annual_Volume_0year__c</fullName>
        <label>Actual Annual Volume (0-year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <picklist>
            <picklistValues>
                <fullName>Bread/ bread products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sweet Biscuits/Cookies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savory Biscuits/Crackers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pastries/Sweet Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixes &amp; Doughs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pasta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dry Mixes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carbonated Soft Drinks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functional &amp; Flavored Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Juice, Juice Drinks, Nectars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sports/Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RTD Tea/Coffee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Powdered /Dry Mixes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquid Concentrates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wine, spirits and alc flavored drinks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sugar Confectionery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chewing Gums</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chocolate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fillings, Coatings, Toppings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready Meals/Kits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sauces, Dressings &amp; Condiments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oils, Fats and Spreads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Egg Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquid Creamers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dairy Desserts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dairy Drinks</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Bakery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confectionery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convenience foods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dairy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fruit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infant &amp; baby food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pet food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Snacks &amp; cereals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food ingredients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test 2</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CoreProduct__c</fullName>
        <formula>TEXT(Product__r.CoreProduct__c )</formula>
        <label>Core Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentAnnualPrice__c</fullName>
        <label>Current Annual Price </label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentFYAnnualVolume__c</fullName>
        <label>Current FY Annual Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Annual_Margin__c</fullName>
        <label>Current Annual Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Projected_CM_0_Year__c</fullName>
        <label>Initial Projected CM (0-Year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Projected_CM_1_Year__c</fullName>
        <label>Initial Projected CM (1-Year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Projected_CM_2_Year__c</fullName>
        <label>Initial Projected CM (2-Year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Projected_Volume_0_Year__c</fullName>
        <label>Initial Projected Volume (0-Year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Projected_Volume_1_Year__c</fullName>
        <label>Initial Projected Volume (1-Year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Projected_Volume_2_Year__c</fullName>
        <label>Initial Projected Volume (2-Year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LegacyRecordID__c</fullName>
        <label>Legacy Record ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Line_Item_Id__c</fullName>
        <externalId>true</externalId>
        <label>Opportunity Line Item Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductFamily__c</fullName>
        <formula>TEXT( Product__r.Family )</formula>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductGroup__c</fullName>
        <formula>TEXT( Product__r.ProductGroup__c )</formula>
        <label>Product Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductLine__c</fullName>
        <formula>TEXT(Product__r.ProductLine__c)</formula>
        <label>Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductSubGroup__c</fullName>
        <formula>TEXT( Product__r.ProductSubGroup__c )</formula>
        <label>Product SubGroup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Project Products</relationshipLabel>
        <relationshipName>Project_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project Products</relationshipLabel>
        <relationshipName>Project_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ProjectedAnnualVolume0Year__c</fullName>
        <label>Projected Annual Volume (0-year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectedAnnualVolume1Year__c</fullName>
        <label>Projected Annual Volume (1-year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectedAnnualVolume2Year__c</fullName>
        <label>Projected Annual Volume (2-year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectedAnnualVolumeCM0Year__c</fullName>
        <label>Projected Annual Volume CM (0-year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectedAnnualVolumeCM1Year__c</fullName>
        <label>Projected Annual Volume CM (1-year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectedAnnualVolumeCM2Year__c</fullName>
        <label>Projected Annual Volume CM (2-year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectedVolume0YearImperial__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Projected Volume (0-Year) Imperial</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectedVolume0YearMetric__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Projected Volume (0-Year) Metric</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectedVolume1YearImperial__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Projected Volume (1-Year) Imperial</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectedVolume1YearMetric__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Projected Volume (1-Year) Metric</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectedVolume2YearImperial__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Projected Volume (2-Year) Imperial</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectedVolume2YearMetric__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Projected Volume (2-Year) Metric</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectedVolumeCM0YearImperial__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Project Volume CM (0-Year) Imperial</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectedVolumeCM0YearMetric__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Project Volume CM (0-Year) Metric</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectedVolumeCM1YearImperial__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Projected Volume CM (1-Year) Imperial</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectedVolumeCM1YearMetric__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Projected Volume CM (1-Year) Metric</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectedVolumeCM2YearImperial__c</fullName>
        <label>Projected Volume CM (2-Year) Imperial</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectedVolumeCM2YearMetric__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Projected Volume CM (2-Year) Metric</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Annual_Volume_3year__c</fullName>
        <label>Projected Annual Volume (3-year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_CM_0_Year__c</fullName>
        <description>Projected Volume CM (0-Year)</description>
        <label>Projected CM (0-Year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_CM_1_Year__c</fullName>
        <label>Projected CM (1-Year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_CM_2_Year__c</fullName>
        <label>Projected CM (2-Year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_Volume_0_Year__c</fullName>
        <description>Projected Volume (0-Year)</description>
        <label>Projected Volume (0-Year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Volume_1_Year__c</fullName>
        <label>Projected Volume (1-Year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Volume_2_Year__c</fullName>
        <label>Projected Volume (2-Year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Volume_CM_0_Year__c</fullName>
        <description>Projected Volume CM (0-Year)</description>
        <label>Project Volume CM (0-Year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Volume_CM_KG_0_Year__c</fullName>
        <formula>CASE(Unit_of_Measure__c, 
&quot;Pound (lb)&quot;, Projected_CM_0_Year__c * 2.20462, 
&quot;Kilogram (kg)&quot;, Projected_CM_0_Year__c, 
&quot;Hundred Weight (CWT)&quot;, Projected_CM_0_Year__c * 50.8023, 
&quot;Metric Ton (MT)&quot;, Projected_CM_0_Year__c * 2205, 
&quot;Each (EA)&quot;, Projected_CM_0_Year__c * Product__r.EAtoKGConversionRate__c, 
&quot;Gallon (GAL)&quot;, Projected_CM_0_Year__c * Product__r.GALtoKGConversionRate__c, 
&quot;Case&quot;, Projected_CM_0_Year__c * Product__r.CASEtoKGConversionRate__c, 
&quot;Liter&quot;, Projected_CM_0_Year__c * Product__r.LITERtoKGConversionRate__c, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Volume CM KG (0-Year)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Volume_CM_KG_1_Year__c</fullName>
        <formula>CASE(Unit_of_Measure__c, 
&quot;Pound (lb)&quot;, Projected_CM_1_Year__c * 2.20462, 
&quot;Kilogram (kg)&quot;, Projected_CM_1_Year__c, 
&quot;Hundred Weight (CWT)&quot;, Projected_CM_1_Year__c * 50.8023, 
&quot;Metric Ton (MT)&quot;, Projected_CM_1_Year__c * 2205, 
&quot;Each (EA)&quot;, Projected_CM_1_Year__c * Product__r.EAtoKGConversionRate__c, 
&quot;Gallon (GAL)&quot;, Projected_CM_1_Year__c * Product__r.GALtoKGConversionRate__c, 
&quot;Case&quot;, Projected_CM_1_Year__c * Product__r.CASEtoKGConversionRate__c, 
&quot;Liter&quot;, Projected_CM_1_Year__c * Product__r.LITERtoKGConversionRate__c, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Volume CM KG (1-Year)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Volume_CM_KG_2_Year__c</fullName>
        <formula>CASE(Unit_of_Measure__c, 
&quot;Pound (lb)&quot;, Projected_CM_2_Year__c * 2.20462, 
&quot;Kilogram (kg)&quot;, Projected_CM_2_Year__c, 
&quot;Hundred Weight (CWT)&quot;, Projected_CM_2_Year__c * 50.8023, 
&quot;Metric Ton (MT)&quot;, Projected_CM_2_Year__c * 2205, 
&quot;Each (EA)&quot;, Projected_CM_2_Year__c * Product__r.EAtoKGConversionRate__c, 
&quot;Gallon (GAL)&quot;, Projected_CM_2_Year__c * Product__r.GALtoKGConversionRate__c, 
&quot;Case&quot;, Projected_CM_2_Year__c * Product__r.CASEtoKGConversionRate__c, 
&quot;Liter&quot;, Projected_CM_2_Year__c * Product__r.LITERtoKGConversionRate__c, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Volume CM KG (2-Year)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Volume_CM_LB_0_Year__c</fullName>
        <formula>CASE( Unit_of_Measure__c, 
&quot;Pound (lb)&quot;, Projected_CM_0_Year__c , 
&quot;Kilogram (kg)&quot;, Projected_CM_0_Year__c * 0.453592, 
&quot;Hundred Weight (CWT)&quot;, Projected_CM_0_Year__c * 100, 
&quot;Metric Ton (MT)&quot;, Projected_CM_0_Year__c * 1000, 
&quot;Each (EA)&quot;, Projected_CM_0_Year__c * Product__r.EAtoLBConversionRate__c , 
&quot;Gallon (GAL)&quot;, Projected_CM_0_Year__c * Product__r.GALtoLBConversionRate__c, 
&quot;Case&quot;, Projected_CM_0_Year__c * Product__r.CASEtoLBConversionRate__c, 
&quot;Liter&quot;, Projected_CM_0_Year__c * Product__r.LITERtoLBConversionRate__c, 
0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Volume CM LB (0-Year)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Volume_CM_LB_1_Year__c</fullName>
        <formula>CASE( Unit_of_Measure__c, 
&quot;Pound (lb)&quot;, Projected_CM_1_Year__c , 
&quot;Kilogram (kg)&quot;, Projected_CM_1_Year__c * 0.453592, 
&quot;Hundred Weight (CWT)&quot;, Projected_CM_1_Year__c * 100, 
&quot;Metric Ton (MT)&quot;, Projected_CM_1_Year__c * 1000, 
&quot;Each (EA)&quot;, Projected_CM_1_Year__c * Product__r.EAtoLBConversionRate__c , 
&quot;Gallon (GAL)&quot;, Projected_CM_1_Year__c * Product__r.GALtoLBConversionRate__c, 
&quot;Case&quot;, Projected_CM_1_Year__c * Product__r.CASEtoLBConversionRate__c, 
&quot;Liter&quot;, Projected_CM_1_Year__c * Product__r.LITERtoLBConversionRate__c, 
0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Volume CM LB (1-Year)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Volume_CM_LB_2_Year__c</fullName>
        <formula>CASE( Unit_of_Measure__c, 
&quot;Pound (lb)&quot;, Projected_CM_2_Year__c , 
&quot;Kilogram (kg)&quot;, Projected_CM_2_Year__c * 0.453592, 
&quot;Hundred Weight (CWT)&quot;, Projected_CM_2_Year__c * 100, 
&quot;Metric Ton (MT)&quot;, Projected_CM_2_Year__c * 1000, 
&quot;Each (EA)&quot;, Projected_CM_2_Year__c * Product__r.EAtoLBConversionRate__c , 
&quot;Gallon (GAL)&quot;, Projected_CM_2_Year__c * Product__r.GALtoLBConversionRate__c, 
&quot;Case&quot;, Projected_CM_2_Year__c * Product__r.CASEtoLBConversionRate__c, 
&quot;Liter&quot;, Projected_CM_2_Year__c * Product__r.LITERtoLBConversionRate__c, 
0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Volume CM LB (2-Year)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Volume_KG_0_Year__c</fullName>
        <formula>CASE(Unit_of_Measure__c, 
&quot;Pound (lb)&quot;, Projected_Volume_0_Year__c * 2.20462, 
&quot;Kilogram (kg)&quot;, Projected_Volume_0_Year__c, 
&quot;Hundred Weight (CWT)&quot;, Projected_Volume_0_Year__c * 50.8023, 
&quot;Metric Ton (MT)&quot;, Projected_Volume_0_Year__c * 2205, 
&quot;Each (EA)&quot;, Projected_Volume_0_Year__c * Product__r.EAtoKGConversionRate__c, 
&quot;Gallon (GAL)&quot;, Projected_Volume_0_Year__c * Product__r.GALtoKGConversionRate__c, 
&quot;Case&quot;, Projected_Volume_0_Year__c * Product__r.CASEtoKGConversionRate__c, 
&quot;Liter&quot;, Projected_Volume_0_Year__c * Product__r.LITERtoKGConversionRate__c, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Volume KG (0-Year)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Volume_KG_1_Year__c</fullName>
        <formula>CASE(Unit_of_Measure__c, 
&quot;Pound (lb)&quot;, Projected_Volume_1_Year__c * 2.20462, 
&quot;Kilogram (kg)&quot;, Projected_Volume_1_Year__c, 
&quot;Hundred Weight (CWT)&quot;, Projected_Volume_1_Year__c * 50.8023, 
&quot;Metric Ton (MT)&quot;, Projected_Volume_1_Year__c * 2205, 
&quot;Each (EA)&quot;, Projected_Volume_1_Year__c * Product__r.EAtoKGConversionRate__c, 
&quot;Gallon (GAL)&quot;, Projected_Volume_1_Year__c * Product__r.GALtoKGConversionRate__c, 
&quot;Case&quot;, Projected_Volume_1_Year__c * Product__r.CASEtoKGConversionRate__c, 
&quot;Liter&quot;, Projected_Volume_1_Year__c * Product__r.LITERtoKGConversionRate__c, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Volume KG (1-Year)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Volume_KG_2_Year__c</fullName>
        <formula>CASE(Unit_of_Measure__c, 
&quot;Pound (lb)&quot;, Projected_Volume_2_Year__c * 2.20462, 
&quot;Kilogram (kg)&quot;, Projected_Volume_2_Year__c, 
&quot;Hundred Weight (CWT)&quot;, Projected_Volume_2_Year__c * 50.8023, 
&quot;Metric Ton (MT)&quot;, Projected_Volume_2_Year__c * 2205, 
&quot;Each (EA)&quot;, Projected_Volume_2_Year__c * Product__r.EAtoKGConversionRate__c, 
&quot;Gallon (GAL)&quot;, Projected_Volume_2_Year__c * Product__r.GALtoKGConversionRate__c, 
&quot;Case&quot;, Projected_Volume_2_Year__c * Product__r.CASEtoKGConversionRate__c, 
&quot;Liter&quot;, Projected_Volume_2_Year__c * Product__r.LITERtoKGConversionRate__c, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Volume KG (2-Year)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Volume_LB_0_Year__c</fullName>
        <formula>CASE( Unit_of_Measure__c,
   &quot;Pound (lb)&quot;,  Projected_Volume_0_Year__c ,
   &quot;Kilogram (kg)&quot;, Projected_Volume_0_Year__c * 0.453592,
   &quot;Hundred Weight (CWT)&quot;, Projected_Volume_0_Year__c * 100,
   &quot;Metric Ton (MT)&quot;, Projected_Volume_0_Year__c * 1000,
   &quot;Each (EA)&quot;, Projected_Volume_0_Year__c * Product__r.EAtoLBConversionRate__c ,
   &quot;Gallon (GAL)&quot;, Projected_Volume_0_Year__c * Product__r.GALtoLBConversionRate__c,
   &quot;Case&quot;, Projected_Volume_0_Year__c * Product__r.CASEtoLBConversionRate__c,
   &quot;Liter&quot;, Projected_Volume_0_Year__c * Product__r.LITERtoLBConversionRate__c,
   0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Volume LB (0-Year)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Volume_LB_1_Year__c</fullName>
        <formula>CASE( Unit_of_Measure__c, 
&quot;Pound (lb)&quot;, Projected_Volume_1_Year__c , 
&quot;Kilogram (kg)&quot;, Projected_Volume_1_Year__c * 0.453592, 
&quot;Hundred Weight (CWT)&quot;, Projected_Volume_1_Year__c * 100, 
&quot;Metric Ton (MT)&quot;, Projected_Volume_1_Year__c * 1000, 
&quot;Each (EA)&quot;, Projected_Volume_1_Year__c * Product__r.EAtoLBConversionRate__c , 
&quot;Gallon (GAL)&quot;, Projected_Volume_1_Year__c * Product__r.GALtoLBConversionRate__c, 
&quot;Case&quot;, Projected_Volume_1_Year__c * Product__r.CASEtoLBConversionRate__c, 
&quot;Liter&quot;, Projected_Volume_1_Year__c * Product__r.LITERtoLBConversionRate__c, 
0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Volume LB (1-Year)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Volume_LB_2_Year__c</fullName>
        <formula>CASE( Unit_of_Measure__c, 
&quot;Pound (lb)&quot;, Projected_Volume_2_Year__c , 
&quot;Kilogram (kg)&quot;, Projected_Volume_2_Year__c * 0.453592, 
&quot;Hundred Weight (CWT)&quot;, Projected_Volume_2_Year__c * 100, 
&quot;Metric Ton (MT)&quot;, Projected_Volume_2_Year__c * 1000, 
&quot;Each (EA)&quot;, Projected_Volume_2_Year__c * Product__r.EAtoLBConversionRate__c , 
&quot;Gallon (GAL)&quot;, Projected_Volume_2_Year__c * Product__r.GALtoLBConversionRate__c, 
&quot;Case&quot;, Projected_Volume_2_Year__c * Product__r.CASEtoLBConversionRate__c, 
&quot;Liter&quot;, Projected_Volume_2_Year__c * Product__r.LITERtoLBConversionRate__c, 
0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Volume LB (2-Year)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SystemOfMeasureInput__c</fullName>
        <description>Users preferred System of Measure. Values input in Metric will be automatically converted to Imperial.  Values input in Imperial will be automatically converted to Metric.</description>
        <inlineHelpText>Users preferred System of Measure. Values input in Metric will be automatically converted to Imperial.  Values input in Imperial will be automatically converted to Metric.</inlineHelpText>
        <label>System of Measure Input</label>
        <picklist>
            <picklistValues>
                <fullName>Imperial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metric</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trigger_workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <description>Unit of Measure for a Product Line Item</description>
        <globalPicklist>Unit_of_Measure_Combined</globalPicklist>
        <inlineHelpText>Indicate the Unit of Measure for a Product Line Item.</inlineHelpText>
        <label>Unit of Measure</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VolumeUnitOMeasureImperial__c</fullName>
        <globalPicklist>UnitOfMeasureImperial</globalPicklist>
        <label>Volume Unit of Measure (Imperial)</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VolumeUnitOfMeasureMetric__c</fullName>
        <globalPicklist>UnitOfMeasureMetric</globalPicklist>
        <label>Volume Unit of Measure (Metric)</label>
        <type>Picklist</type>
    </fields>
</CustomObject>